--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -26,7 +26,8 @@
 @import "checkout";
 @import "how_it_works_sections";
 @import "button";
-
+@import "pagination";
+@import "navbar_shopping_cart";
 
 
 
