--- a/app/views/components/_logos.html.erb
+++ b/app/views/components/_logos.html.erb
@@ -6,24 +6,20 @@
   <div class="references_content" >
     <div class="titles" >
       <div class=" brand-text title_1 active" >
-        <h3 class="title " >Title 1 - Brand 1</h3>
-        <h4 class="sub_title" >Subtitle 1</h4>
+        <h3 class="title " >"Reinventaron la experiencia de comprar medicinas"</h3>
+        <h4 class="sub_title" >El Economista</h4>
       </div>
       <div class="brand-text title_2" >
-        <h3 class="title " >Title 2 - Brand 2</h3>
-        <h4 class="sub_title" >Subtitle 2</h4>
+        <h3 class="title " >"Suscrimed facilita el manejo de medicamentos"</h3>
+        <h4 class="sub_title" >GNP</h4>
       </div>
       <div class="brand-text title_3" >
-        <h3 class="title " >Title 3 - Brand 3</h3>
-        <h4 class="sub_title" >Subtitle 3</h4>
+        <h3 class="title " >"Suscrimed elimina la molestia de ir a la farmacia"</h3>
+        <h4 class="sub_title" >NaDro</h4>
       </div>
       <div class="brand-text title_4" >
-        <h3 class="title " >Title 4 - Brand 4</h3>
-        <h4 class="sub_title" >Subtitle 4</h4>
-      </div>
-      <div class="brand-text title_5" >
-        <h3 class="title " >Title 5 - Brand 5</h3>
-        <h4 class="sub_title" >Subtitle 5</h4>
+        <h3 class="title " >"Empresas como Suscrimed mejoran el acceso a los medicamentos"</h3>
+        <h4 class="sub_title" >Mapfre</h4>
       </div>
     </div>
     <span  class="line" ></span>
@@ -32,7 +28,7 @@
       <img alt="brand_2" class="brand title_2 " src="<%= asset_path 'gnp.svg' %>" >
       <img alt="brand_3" class="brand title_3 active" src="<%= asset_path 'Nadro.svg' %>" >
       <img alt="brand_4" class="brand title_4 " src="<%= asset_path 'map.svg' %>" >
-      <img alt="brand_5" class="brand title_5" src="<%= asset_path 'econo.svg' %>" >
+
     </div>
   </div>
 </div>
