--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,10 @@
   </head>
 
   <body>
+    <div data-controller="counter">
     <%= render "components/navbar"  %>
     <%= yield %>
     <%= render "components/footer2"  %>
+    </div>
   </body>
 </html>
