--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <!--Hero Section-->
     <div class="hero-section" style="background-image: url(<%= asset_path 'Suscrimed-Backround.jpg' %>);">
       <div class="wrapper">
-        <img class="small-logo" src="<%= asset_path 'suscrimed-logo-full' %>" alt="logo">
+        <img class="small-logo" src="<%= asset_path 'suscrimed-logo-full.png' %>" alt="logo">
         <p >🇲🇽 La farmacia en línea #1 de México</p>
         <h1 class="hero-heading">Envió Gratis En Todo México</h1>
         <p class="normal">Ahorra tiempo y dinero, nosotros nos encargamos de tu salud</p>
