--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@
                  <span class="item_header" > Agenda tus proximas entregas</span>
                  <p class="item_text" >Toma menos de 2 minutos</p>
             </li>
-            <li class="item" ><img class="img" src="<%= asset_path 'enviogratis' %>" >
+            <li class="item" ><img class="img" src="<%= asset_path 'enviogratis.svg' %>" >
                  <span class="item_header" >Envio gratis</span>
                  <p class="item_text" >Recibe tus medicamentos sin costo adicional. Solo pagas por tus medicinas</p>
             </li>
