--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -37,7 +37,7 @@
                                       <div class="product-qty"> <span class="d-block"><%= invoice_detail.quantity %></span> </div>
                                   </td>
                                   <td width="20%">
-                                      <div class="text-right"> <span class="font-weight-bold"><%= invoice_detail.subtotal %></span> </div>
+                                      <div class="text-right"> <span class="font-weight-bold"><%= invoice_detail.subtotal/100 %></span> </div>
                                   </td>
                               </tr>
                             <% end %>
@@ -85,7 +85,7 @@
                                             <div class="text-left"> <span class="font-weight-bold">Subtotal</span> </div>
                                         </td>
                                         <td>
-                                            <div class="text-right"> <span class="font-weight-bold"><%= @invoice.invoice_details.sum(:subtotal) %> </span> </div>
+                                            <div class="text-right"> <span class="font-weight-bold"><%= @invoice.invoice_details.sum(:subtotal)/100 %> </span> </div>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -95,7 +95,7 @@
                     <p>¡Enviaremos un correo electrónico de confirmación de envío cuando el artículo se envíe correctamente!</p>
                     <p class="font-weight-bold mb-0">Gracias por comprar con nosotros!</p> <span>Equipo suscrimed</span>
                 </div>
-                <div class="d-flex justify-content-between footer p-3"> <span>¿Necesitas servicio de ayuda? <a href="#">333-100-3703</a></span> <span>12 June, 2020</span> </div>
+                <div class="d-flex justify-content-between footer p-3"> <span>¿Necesitas servicio de ayuda? <a href="#">333-100-3703</a></span> <span><%=  Date.current.strftime("%d/%m/%Y") %></span> </div>
             </div>
         </div>
     </div>
